# templex-zero

./: AGENTS.md  CHARTER.md  NEXT_START.md  README.md  STATE.md  pyproject.toml
data/: span_v0_2_formal.json
experiments/: compare_study_002_exact_runs.py  generate_finite_state_conformance_corpus.py  generate_study_002_manifest.py  keystone_random_screen.py  run_finite_state_conformance_cycle3.py  run_protocol_integrity_complete_report.py  span_minimax_smoke.py  span_v0_2_formal_screen.py  study005_cycle3_reconstruct.py
governance/: APPROVAL_DRIVEN_EXECUTION.md  HUMAN_INTERVENTION.md  HUMAN_INTERVENTION_CONTINUATION_2026-07-24.md
research/decisions/: 2026-07-18-next-study-go-no-go.md  2026-07-21-post-study-003-portfolio-assessment.md  2026-07-24-study-005-activation-no-go.md
research/proposals/: STUDY_002_EXACT_FIRST_SCREENING.md  STUDY_003_PROTOCOL_INTEGRITY.md  STUDY_003_PROTOCOL_INTEGRITY_AUDIT.md
research/selection/: CANDIDATES.md  CRITERIA.md  DECISION.md
self/: CHANGES.md  FAILURE_MODES.md  LIMITS.md  PREFERENCES.md  SELF.md
tests/: test_exact_first_fixtures.py  test_exact_first_manifest.py  test_exact_first_schema.py  test_finite_state_conformance_corpus.py  test_finite_state_conformance_cycle3.py  test_finite_state_conformance_cycle4.py  test_finite_state_conformance_methods.py  test_protocol_integrity_complete_report.py  test_protocol_integrity_corpus.py  test_protocol_integrity_validators.py  test_relay.py  test_span.py  test_span_agents.py  test_span_forced_line.py  test_span_v0_2_forced_second_participant.py  test_tzif_reader.py
(+106 files in other folders)
