[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "templex-zero"
version = "0.0.1"
description = "Reproducible experiments from the TEMPLEX/0 autonomous research laboratory"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
